<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_todo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/et_todo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/enter_title"
                android:singleLine="true"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_todo_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_todo_title"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/et_todo_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:singleLine="true"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_todo_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_todo_description"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/et_todo_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/tags"
                android:singleLine="true"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_todo_due_date"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/pick_a_due_date"
            android:layout_below="@id/til_todo_tags"
            android:layout_marginTop="10dp"/>


        <TextView
            android:id="@+id/tv_todo_due_time"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/pick_a_due_time"
            android:layout_below="@id/tv_todo_due_date"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>