<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:textSize="16sp"
        android:text="@string/how_many_item_do_you_want_to_create"
        android:textColor="#000000"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/et_item_count"
        android:layout_width="200dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_cancel_item_count_dialog"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#B22222"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/button_create_item"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/create"
            android:textColor="#B22222"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>